fix inter cell spacing/padding for width scaled tables

--- a/css/main.scss
+++ b/css/main.scss
@@ -996,13 +996,30 @@ $baseurl: '{{ site.baseurl }}/images';
 		&.width-scaled {
 			margin-left: auto;
 			margin-right: auto;
+			
+
+
 			td {
+				padding-top: 0.5em;
+				padding-bottom: 0.5em;
+				padding-left: 0.25em;
+				padding-right: 0.25em;
+
 				img { /*images are contained and scaled */
 					max-width: 100%;
 					max-height: 100%;
 					object-fit: contain;
 				}
+
+				&:first-child {
+					padding-left: 0.5em;
+				}
+	
+				&:last-child {
+					padding-right: 0.5em;
+				}
 			}
+
 		}
 	}
 
